bad/2020-07-06/14-39/115.1/build.err
run.c: In function ‘gloom’:
run.c:7:10: error: ‘chaine’ undeclared (first use in this function); did you mean ‘char’?
   while (chaine[i] != '\0')
          ^~~~~~
          char
run.c:7:10: note: each undeclared identifier is reported only once for each function it appears in
run.c:7:17: error: ‘i’ undeclared (first use in this function)
   while (chaine[i] != '\0')
                 ^